api/k8s/api-achat-facture-mb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: api-achat-facture-mb
  name: api-achat-facture-mb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-achat-facture-mb
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: api-achat-facture-mb
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: "postgresql"
            - name: DB_NAME
              value: intradb
            - name: DB_PASSWORD
              value: password123
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: "admin"
          image: localhost:5000/api-achat-facture-mb
          livenessProbe:
            exec:
              command:
                - wget
                - -q
                - -O
                - '-'
                - http://localhost:8001/health
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: api-achat-facture-mb
          ports:
            - containerPort: 8001
              hostPort: 8001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
