api/k8s/api-achat-facture-mb-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: api-achat-facture-mb
  name: api-achat-facture-mb
  namespace: default
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: api-achat-facture-mb
status:
  loadBalancer: {}
