api/k8s/api-achat-facture-mb-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: large-body
  namespace: default
spec:
  buffering:
    maxRequestBodyBytes: 104857600  # 100MB
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-achat-facture-mb
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`logiciel.cabinet-martini.fr`) && PathPrefix(`/api`)
      kind: Rule
      priority: 100
      services:
        - name: api-achat-facture-mb
          port: 8017
          serversTransport: long-timeout
      middlewares:
        - name: large-body
